--- a/html/date/2024-07/page-6.htm
+++ b/html/date/2024-07/page-6.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-8635.htm" title="领养宠物合同协议书怎么写模板（领养宠物协议书在法律上属于什么合同）">领养宠物合同协议书怎么写模板（领养宠物协议书在法律上属于什么合同）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8363.htm" title="动物防疫站可以打疫苗吗（动物防疫站能打疫苗吗）">动物防疫站可以打疫苗吗（动物防疫站能打疫苗吗）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8029.htm" title="简述动物防疫管理的要点是什么（简述动物防疫管理的要点是什么意思）">简述动物防疫管理的要点是什么（简述动物防疫管理的要点是什么意思）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7922.htm" title="动物接种疫苗多少钱一次啊深圳 动物接种疫苗多少钱一次啊深圳市">动物接种疫苗多少钱一次啊深圳 动物接种疫苗多少钱一次啊深圳市</a></li>
-                        <li class="py-2"><a href="/html/category/article-7976.htm" title="什么品牌的手表适合年轻人戴(哪种手表适合年轻人)">什么品牌的手表适合年轻人戴(哪种手表适合年轻人)</a></li>
-                        <li class="py-2"><a href="/html/category/article-8030.htm" title="动物医院叫什么名字啊英文（动物医院 英文）">动物医院叫什么名字啊英文（动物医院 英文）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8582.htm" title="开宠物医院需要几个职业兽医资格证（开宠物医院需要几个职业兽医资格证呢）">开宠物医院需要几个职业兽医资格证（开宠物医院需要几个职业兽医资格证呢）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7755.htm" title="宠物粮食行业发展前景如何知乎（宠物粮食行业发展前景如何知乎）">宠物粮食行业发展前景如何知乎（宠物粮食行业发展前景如何知乎）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8472.htm" title="广州宠物领养平台官网电话（广州市宠物领养平台）">广州宠物领养平台官网电话（广州市宠物领养平台）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7702.htm" title="厦门哪里可以免费领养猫（厦门免费领养猫正规网）">厦门哪里可以免费领养猫（厦门免费领养猫正规网）</a></li>
                         <li class="py-2"><a href="/html/category/article-8857.htm" title="梦见抱着别人的女婴儿是什么意思（梦见抱着别人的小女孩什么意思）">梦见抱着别人的女婴儿是什么意思（梦见抱着别人的小女孩什么意思）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8250.htm" title="蛋糕的做法烤箱新手做（蛋糕的做法烤箱新手做不用牛奶）">蛋糕的做法烤箱新手做（蛋糕的做法烤箱新手做不用牛奶）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7921.htm" title="动物打一针疫苗多少钱啊（动物打疫苗的作用）">动物打一针疫苗多少钱啊（动物打疫苗的作用）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7755.htm" title="宠物粮食行业发展前景如何知乎（宠物粮食行业发展前景如何知乎）">宠物粮食行业发展前景如何知乎（宠物粮食行业发展前景如何知乎）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7975.htm" title="宠物领养证如何办理的流程（宠物领养程序怎么领养）">宠物领养证如何办理的流程（宠物领养程序怎么领养）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9061.htm" title="拌料机的用途（大型拌料机的工作视频）">拌料机的用途（大型拌料机的工作视频）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8140.htm" title="宠物粮怎么加工出来的 宠物粮怎么加工出来的呢">宠物粮怎么加工出来的 宠物粮怎么加工出来的呢</a></li>
+                        <li class="py-2"><a href="/html/category/article-8139.htm" title="宠物粮食批发价格 宠物粮食批发价格表">宠物粮食批发价格 宠物粮食批发价格表</a></li>
+                        <li class="py-2"><a href="/html/category/article-8364.htm" title="宠物用品厂家进货渠道批发（宠物用品货源渠道）">宠物用品厂家进货渠道批发（宠物用品货源渠道）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">2</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">6</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">62</span></li>
