--- a/html/date/2024-05/page-2.htm
+++ b/html/date/2024-05/page-2.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-7591.htm" title="动物疫苗接种方法及注意事项有哪些内容呢英语（动物疫苗接种技术）">动物疫苗接种方法及注意事项有哪些内容呢英语（动物疫苗接种技术）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7867.htm" title="动物接种疫苗的简报怎么写范文图片（动物接种疫苗的简报怎么写范文图片大全）">动物接种疫苗的简报怎么写范文图片（动物接种疫苗的简报怎么写范文图片大全）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8364.htm" title="宠物用品厂家进货渠道批发（宠物用品货源渠道）">宠物用品厂家进货渠道批发（宠物用品货源渠道）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8363.htm" title="动物防疫站可以打疫苗吗（动物防疫站能打疫苗吗）">动物防疫站可以打疫苗吗（动物防疫站能打疫苗吗）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8029.htm" title="简述动物防疫管理的要点是什么（简述动物防疫管理的要点是什么意思）">简述动物防疫管理的要点是什么（简述动物防疫管理的要点是什么意思）</a></li>
                         <li class="py-2"><a href="/html/category/article-8307.htm" title="中国十大动物疫苗公司排名第一（中国动物疫苗十强上市公司）">中国十大动物疫苗公司排名第一（中国动物疫苗十强上市公司）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8694.htm" title="自家猫咪抓了一点点血怎么办（自己家的小猫咪抓伤了还出了一点血没事吧）">自家猫咪抓了一点点血怎么办（自己家的小猫咪抓伤了还出了一点血没事吧）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8858.htm" title="南瓜小米粥的做法家常做法大全(南瓜小米粥如何做好吃)">南瓜小米粥的做法家常做法大全(南瓜小米粥如何做好吃)</a></li>
+                        <li class="py-2"><a href="/html/category/article-7976.htm" title="什么品牌的手表适合年轻人戴(哪种手表适合年轻人)">什么品牌的手表适合年轻人戴(哪种手表适合年轻人)</a></li>
                         <li class="py-2"><a href="/html/category/article-8749.htm" title="安全摇篮哪个牌子好(摇篮安宝宝奶粉的特点)">安全摇篮哪个牌子好(摇篮安宝宝奶粉的特点)</a></li>
-                        <li class="py-2"><a href="/html/category/article-7702.htm" title="厦门哪里可以免费领养猫（厦门免费领养猫正规网）">厦门哪里可以免费领养猫（厦门免费领养猫正规网）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8419.htm" title="动物疫苗企业名单公示时间 动物疫苗企业名单公示时间表">动物疫苗企业名单公示时间 动物疫苗企业名单公示时间表</a></li>
-                        <li class="py-2"><a href="/html/category/article-8139.htm" title="宠物粮食批发价格 宠物粮食批发价格表">宠物粮食批发价格 宠物粮食批发价格表</a></li>
+                        <li class="py-2"><a href="/html/category/article-7975.htm" title="宠物领养证如何办理的流程（宠物领养程序怎么领养）">宠物领养证如何办理的流程（宠物领养程序怎么领养）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7868.htm" title="猫粮的生产技术有哪些（猫粮的生产过程）">猫粮的生产技术有哪些（猫粮的生产过程）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7811.htm" title="被误解千年的语句（戏王之王电视剧）全程干货，">被误解千年的语句（戏王之王电视剧）全程干货，</a></li>
+                        <li class="py-2"><a href="/html/category/article-8196.htm" title="宠物托运送货上门多少钱（宠物托运送货上门多少钱一个月）">宠物托运送货上门多少钱（宠物托运送货上门多少钱一个月）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7812.htm" title="开动物诊所挣钱吗（开动物诊所需要什么条件）">开动物诊所挣钱吗（开动物诊所需要什么条件）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">2</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">6</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">62</span></li>
