--- a/html/date/2024-05/page-6.htm
+++ b/html/date/2024-05/page-6.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-7812.htm" title="开动物诊所挣钱吗（开动物诊所需要什么条件）">开动物诊所挣钱吗（开动物诊所需要什么条件）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8085.htm" title="成都宠物托运公司哪家比较好一点（成都宠物物流公司）">成都宠物托运公司哪家比较好一点（成都宠物物流公司）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8196.htm" title="宠物托运送货上门多少钱（宠物托运送货上门多少钱一个月）">宠物托运送货上门多少钱（宠物托运送货上门多少钱一个月）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7482.htm" title="ugg是什么品牌中文名怎么读(ugg是什么品牌鞋子多少钱)">ugg是什么品牌中文名怎么读(ugg是什么品牌鞋子多少钱)</a></li>
-                        <li class="py-2"><a href="/html/category/article-7702.htm" title="厦门哪里可以免费领养猫（厦门免费领养猫正规网）">厦门哪里可以免费领养猫（厦门免费领养猫正规网）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9062.htm" title="猫瘟疫苗要打几次（猫瘟疫苗打几次有效）">猫瘟疫苗要打几次（猫瘟疫苗打几次有效）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8635.htm" title="领养宠物合同协议书怎么写模板（领养宠物协议书在法律上属于什么合同）">领养宠物合同协议书怎么写模板（领养宠物协议书在法律上属于什么合同）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7975.htm" title="宠物领养证如何办理的流程（宠物领养程序怎么领养）">宠物领养证如何办理的流程（宠物领养程序怎么领养）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8364.htm" title="宠物用品厂家进货渠道批发（宠物用品货源渠道）">宠物用品厂家进货渠道批发（宠物用品货源渠道）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8694.htm" title="自家猫咪抓了一点点血怎么办（自己家的小猫咪抓伤了还出了一点血没事吧）">自家猫咪抓了一点点血怎么办（自己家的小猫咪抓伤了还出了一点血没事吧）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8582.htm" title="开宠物医院需要几个职业兽医资格证（开宠物医院需要几个职业兽医资格证呢）">开宠物医院需要几个职业兽医资格证（开宠物医院需要几个职业兽医资格证呢）</a></li>
                         <li class="py-2"><a href="/html/category/article-8909.htm" title="动物疫苗的作用有哪些方面的问题 动物疫苗的作用有哪些方面的问题呢">动物疫苗的作用有哪些方面的问题 动物疫苗的作用有哪些方面的问题呢</a></li>
-                        <li class="py-2"><a href="/html/category/article-8249.htm" title="狗粮品牌十大排行国产有哪些（狗粮排名前十品牌国产）">狗粮品牌十大排行国产有哪些（狗粮排名前十品牌国产）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8307.htm" title="中国十大动物疫苗公司排名第一（中国动物疫苗十强上市公司）">中国十大动物疫苗公司排名第一（中国动物疫苗十强上市公司）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8308.htm" title="减脂番茄豆腐汤的做法(低脂番茄豆腐汤)">减脂番茄豆腐汤的做法(低脂番茄豆腐汤)</a></li>
-                        <li class="py-2"><a href="/html/category/article-8750.htm" title="北京中农大动物医院有限公司待遇 北京中农大动物医院有限公司待遇怎么样">北京中农大动物医院有限公司待遇 北京中农大动物医院有限公司待遇怎么样</a></li>
+                        <li class="py-2"><a href="/html/category/article-9113.htm" title="哈尔滨农大动物医院地址 哈尔滨农大动物医院地址在哪">哈尔滨农大动物医院地址 哈尔滨农大动物医院地址在哪</a></li>
+                        <li class="py-2"><a href="/html/category/article-8250.htm" title="蛋糕的做法烤箱新手做（蛋糕的做法烤箱新手做不用牛奶）">蛋糕的做法烤箱新手做（蛋糕的做法烤箱新手做不用牛奶）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7976.htm" title="什么品牌的手表适合年轻人戴(哪种手表适合年轻人)">什么品牌的手表适合年轻人戴(哪种手表适合年轻人)</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">2</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">6</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">62</span></li>
