--- a/html/date/2024-06/page-3.htm
+++ b/html/date/2024-06/page-3.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-7868.htm" title="猫粮的生产技术有哪些（猫粮的生产过程）">猫粮的生产技术有哪些（猫粮的生产过程）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8857.htm" title="梦见抱着别人的女婴儿是什么意思（梦见抱着别人的小女孩什么意思）">梦见抱着别人的女婴儿是什么意思（梦见抱着别人的小女孩什么意思）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8910.htm" title="宠物商标名字大全10000个 宠物商标名字大全10000个带图片">宠物商标名字大全10000个 宠物商标名字大全10000个带图片</a></li>
-                        <li class="py-2"><a href="/html/category/article-7867.htm" title="动物接种疫苗的简报怎么写范文图片（动物接种疫苗的简报怎么写范文图片大全）">动物接种疫苗的简报怎么写范文图片（动物接种疫苗的简报怎么写范文图片大全）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8804.htm" title="宠爱国际动物医院在哪里直播（宠爱国际动物园怎么样）">宠爱国际动物医院在哪里直播（宠爱国际动物园怎么样）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9062.htm" title="猫瘟疫苗要打几次（猫瘟疫苗打几次有效）">猫瘟疫苗要打几次（猫瘟疫苗打几次有效）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8582.htm" title="开宠物医院需要几个职业兽医资格证（开宠物医院需要几个职业兽医资格证呢）">开宠物医院需要几个职业兽医资格证（开宠物医院需要几个职业兽医资格证呢）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9114.htm" title="河南省动物疫苗招标公告最新版（河南省动物疫病疫苗管理系统）">河南省动物疫苗招标公告最新版（河南省动物疫病疫苗管理系统）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8419.htm" title="动物疫苗企业名单公示时间 动物疫苗企业名单公示时间表">动物疫苗企业名单公示时间 动物疫苗企业名单公示时间表</a></li>
                         <li class="py-2"><a href="/html/category/article-8196.htm" title="宠物托运送货上门多少钱（宠物托运送货上门多少钱一个月）">宠物托运送货上门多少钱（宠物托运送货上门多少钱一个月）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7975.htm" title="宠物领养证如何办理的流程（宠物领养程序怎么领养）">宠物领养证如何办理的流程（宠物领养程序怎么领养）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8250.htm" title="蛋糕的做法烤箱新手做（蛋糕的做法烤箱新手做不用牛奶）">蛋糕的做法烤箱新手做（蛋糕的做法烤箱新手做不用牛奶）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8694.htm" title="自家猫咪抓了一点点血怎么办（自己家的小猫咪抓伤了还出了一点血没事吧）">自家猫咪抓了一点点血怎么办（自己家的小猫咪抓伤了还出了一点血没事吧）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8803.htm" title="动物接种疫苗多少次有效呢（动物接种疫苗多少次有效呢）">动物接种疫苗多少次有效呢（动物接种疫苗多少次有效呢）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8249.htm" title="狗粮品牌十大排行国产有哪些（狗粮排名前十品牌国产）">狗粮品牌十大排行国产有哪些（狗粮排名前十品牌国产）</a></li>
                         <li class="py-2"><a href="/html/category/article-8308.htm" title="减脂番茄豆腐汤的做法(低脂番茄豆腐汤)">减脂番茄豆腐汤的做法(低脂番茄豆腐汤)</a></li>
-                        <li class="py-2"><a href="/html/category/article-8472.htm" title="广州宠物领养平台官网电话（广州市宠物领养平台）">广州宠物领养平台官网电话（广州市宠物领养平台）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7755.htm" title="宠物粮食行业发展前景如何知乎（宠物粮食行业发展前景如何知乎）">宠物粮食行业发展前景如何知乎（宠物粮食行业发展前景如何知乎）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">2</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">6</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">62</span></li>
