--- a/html/date/2024-07/page-2.htm
+++ b/html/date/2024-07/page-2.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-8195.htm" title="知名奶茶店品牌(前10名奶茶店有哪些牌子)">知名奶茶店品牌(前10名奶茶店有哪些牌子)</a></li>
-                        <li class="py-2"><a href="/html/category/article-8636.htm" title="宠物领养平台app推荐下载苹果手机（宠物领养平台app推荐下载苹果手机软件）">宠物领养平台app推荐下载苹果手机（宠物领养平台app推荐下载苹果手机软件）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8029.htm" title="简述动物防疫管理的要点是什么（简述动物防疫管理的要点是什么意思）">简述动物防疫管理的要点是什么（简述动物防疫管理的要点是什么意思）</a></li>
                         <li class="py-2"><a href="/html/category/article-8420.htm" title="动物医院许可证办理流程图（动物医院诊疗许可证办理）">动物医院许可证办理流程图（动物医院诊疗许可证办理）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7481.htm" title="猫爬到床上会很脏吗（猫爬到床上会很脏吗为什么猫舔自己）">猫爬到床上会很脏吗（猫爬到床上会很脏吗为什么猫舔自己）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7868.htm" title="猫粮的生产技术有哪些（猫粮的生产过程）">猫粮的生产技术有哪些（猫粮的生产过程）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8962.htm" title="开宠物店一天利润多少才能不亏本钱（开宠物店预算多少）">开宠物店一天利润多少才能不亏本钱（开宠物店预算多少）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7976.htm" title="什么品牌的手表适合年轻人戴(哪种手表适合年轻人)">什么品牌的手表适合年轻人戴(哪种手表适合年轻人)</a></li>
-                        <li class="py-2"><a href="/html/category/article-7536.htm" title="深圳装修公司排名前十强有哪些公司(深圳装修公司排名前十强有哪些品牌)">深圳装修公司排名前十强有哪些公司(深圳装修公司排名前十强有哪些品牌)</a></li>
+                        <li class="py-2"><a href="/html/category/article-8803.htm" title="动物接种疫苗多少次有效呢（动物接种疫苗多少次有效呢）">动物接种疫苗多少次有效呢（动物接种疫苗多少次有效呢）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9113.htm" title="哈尔滨农大动物医院地址 哈尔滨农大动物医院地址在哪">哈尔滨农大动物医院地址 哈尔滨农大动物医院地址在哪</a></li>
                         <li class="py-2"><a href="/html/category/article-8249.htm" title="狗粮品牌十大排行国产有哪些（狗粮排名前十品牌国产）">狗粮品牌十大排行国产有哪些（狗粮排名前十品牌国产）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7812.htm" title="开动物诊所挣钱吗（开动物诊所需要什么条件）">开动物诊所挣钱吗（开动物诊所需要什么条件）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8471.htm" title="警长警探（女子特案组）怎么可以错过，">警长警探（女子特案组）怎么可以错过，</a></li>
+                        <li class="py-2"><a href="/html/category/article-8525.htm" title="豆豉蒜头煮南瓜的做法大全(豆豉蒜头煮南瓜的做法窍门)">豆豉蒜头煮南瓜的做法大全(豆豉蒜头煮南瓜的做法窍门)</a></li>
+                        <li class="py-2"><a href="/html/category/article-8636.htm" title="宠物领养平台app推荐下载苹果手机（宠物领养平台app推荐下载苹果手机软件）">宠物领养平台app推荐下载苹果手机（宠物领养平台app推荐下载苹果手机软件）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8139.htm" title="宠物粮食批发价格 宠物粮食批发价格表">宠物粮食批发价格 宠物粮食批发价格表</a></li>
+                        <li class="py-2"><a href="/html/category/article-8195.htm" title="知名奶茶店品牌(前10名奶茶店有哪些牌子)">知名奶茶店品牌(前10名奶茶店有哪些牌子)</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">2</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">6</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">62</span></li>
