--- a/html/date/2024-08/page-2.htm
+++ b/html/date/2024-08/page-2.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-8525.htm" title="豆豉蒜头煮南瓜的做法大全(豆豉蒜头煮南瓜的做法窍门)">豆豉蒜头煮南瓜的做法大全(豆豉蒜头煮南瓜的做法窍门)</a></li>
-                        <li class="py-2"><a href="/html/category/article-8909.htm" title="动物疫苗的作用有哪些方面的问题 动物疫苗的作用有哪些方面的问题呢">动物疫苗的作用有哪些方面的问题 动物疫苗的作用有哪些方面的问题呢</a></li>
-                        <li class="py-2"><a href="/html/category/article-8635.htm" title="领养宠物合同协议书怎么写模板（领养宠物协议书在法律上属于什么合同）">领养宠物合同协议书怎么写模板（领养宠物协议书在法律上属于什么合同）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8582.htm" title="开宠物医院需要几个职业兽医资格证（开宠物医院需要几个职业兽医资格证呢）">开宠物医院需要几个职业兽医资格证（开宠物医院需要几个职业兽医资格证呢）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7976.htm" title="什么品牌的手表适合年轻人戴(哪种手表适合年轻人)">什么品牌的手表适合年轻人戴(哪种手表适合年轻人)</a></li>
                         <li class="py-2"><a href="/html/category/article-8749.htm" title="安全摇篮哪个牌子好(摇篮安宝宝奶粉的特点)">安全摇篮哪个牌子好(摇篮安宝宝奶粉的特点)</a></li>
-                        <li class="py-2"><a href="/html/category/article-7481.htm" title="猫爬到床上会很脏吗（猫爬到床上会很脏吗为什么猫舔自己）">猫爬到床上会很脏吗（猫爬到床上会很脏吗为什么猫舔自己）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8582.htm" title="开宠物医院需要几个职业兽医资格证（开宠物医院需要几个职业兽医资格证呢）">开宠物医院需要几个职业兽医资格证（开宠物医院需要几个职业兽医资格证呢）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9113.htm" title="哈尔滨农大动物医院地址 哈尔滨农大动物医院地址在哪">哈尔滨农大动物医院地址 哈尔滨农大动物医院地址在哪</a></li>
+                        <li class="py-2"><a href="/html/category/article-8364.htm" title="宠物用品厂家进货渠道批发（宠物用品货源渠道）">宠物用品厂家进货渠道批发（宠物用品货源渠道）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9114.htm" title="河南省动物疫苗招标公告最新版（河南省动物疫病疫苗管理系统）">河南省动物疫苗招标公告最新版（河南省动物疫病疫苗管理系统）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8694.htm" title="自家猫咪抓了一点点血怎么办（自己家的小猫咪抓伤了还出了一点血没事吧）">自家猫咪抓了一点点血怎么办（自己家的小猫咪抓伤了还出了一点血没事吧）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8471.htm" title="警长警探（女子特案组）怎么可以错过，">警长警探（女子特案组）怎么可以错过，</a></li>
                         <li class="py-2"><a href="/html/category/article-8804.htm" title="宠爱国际动物医院在哪里直播（宠爱国际动物园怎么样）">宠爱国际动物医院在哪里直播（宠爱国际动物园怎么样）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8581.htm" title="小彬彬现在的照片（小小彬）原创，">小彬彬现在的照片（小小彬）原创，</a></li>
-                        <li class="py-2"><a href="/html/category/article-7922.htm" title="动物接种疫苗多少钱一次啊深圳 动物接种疫苗多少钱一次啊深圳市">动物接种疫苗多少钱一次啊深圳 动物接种疫苗多少钱一次啊深圳市</a></li>
+                        <li class="py-2"><a href="/html/category/article-8857.htm" title="梦见抱着别人的女婴儿是什么意思（梦见抱着别人的小女孩什么意思）">梦见抱着别人的女婴儿是什么意思（梦见抱着别人的小女孩什么意思）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8803.htm" title="动物接种疫苗多少次有效呢（动物接种疫苗多少次有效呢）">动物接种疫苗多少次有效呢（动物接种疫苗多少次有效呢）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">2</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">6</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">62</span></li>
