--- a/html/date/2024-08/page-4.htm
+++ b/html/date/2024-08/page-4.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-7755.htm" title="宠物粮食行业发展前景如何知乎（宠物粮食行业发展前景如何知乎）">宠物粮食行业发展前景如何知乎（宠物粮食行业发展前景如何知乎）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8250.htm" title="蛋糕的做法烤箱新手做（蛋糕的做法烤箱新手做不用牛奶）">蛋糕的做法烤箱新手做（蛋糕的做法烤箱新手做不用牛奶）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8962.htm" title="开宠物店一天利润多少才能不亏本钱（开宠物店预算多少）">开宠物店一天利润多少才能不亏本钱（开宠物店预算多少）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8694.htm" title="自家猫咪抓了一点点血怎么办（自己家的小猫咪抓伤了还出了一点血没事吧）">自家猫咪抓了一点点血怎么办（自己家的小猫咪抓伤了还出了一点血没事吧）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7647.htm" title="给动物打疫苗要多少钱猫咪打（动物疫站给猫打疫苗收钱吗?）">给动物打疫苗要多少钱猫咪打（动物疫站给猫打疫苗收钱吗?）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7811.htm" title="被误解千年的语句（戏王之王电视剧）全程干货，">被误解千年的语句（戏王之王电视剧）全程干货，</a></li>
-                        <li class="py-2"><a href="/html/category/article-7922.htm" title="动物接种疫苗多少钱一次啊深圳 动物接种疫苗多少钱一次啊深圳市">动物接种疫苗多少钱一次啊深圳 动物接种疫苗多少钱一次啊深圳市</a></li>
-                        <li class="py-2"><a href="/html/category/article-8420.htm" title="动物医院许可证办理流程图（动物医院诊疗许可证办理）">动物医院许可证办理流程图（动物医院诊疗许可证办理）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8196.htm" title="宠物托运送货上门多少钱（宠物托运送货上门多少钱一个月）">宠物托运送货上门多少钱（宠物托运送货上门多少钱一个月）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8636.htm" title="宠物领养平台app推荐下载苹果手机（宠物领养平台app推荐下载苹果手机软件）">宠物领养平台app推荐下载苹果手机（宠物领养平台app推荐下载苹果手机软件）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8635.htm" title="领养宠物合同协议书怎么写模板（领养宠物协议书在法律上属于什么合同）">领养宠物合同协议书怎么写模板（领养宠物协议书在法律上属于什么合同）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8030.htm" title="动物医院叫什么名字啊英文（动物医院 英文）">动物医院叫什么名字啊英文（动物医院 英文）</a></li>
                         <li class="py-2"><a href="/html/category/article-8910.htm" title="宠物商标名字大全10000个 宠物商标名字大全10000个带图片">宠物商标名字大全10000个 宠物商标名字大全10000个带图片</a></li>
-                        <li class="py-2"><a href="/html/category/article-8140.htm" title="宠物粮怎么加工出来的 宠物粮怎么加工出来的呢">宠物粮怎么加工出来的 宠物粮怎么加工出来的呢</a></li>
+                        <li class="py-2"><a href="/html/category/article-8693.htm" title="妙三多疫苗打几次（妙三多疫苗一次打多少毫升）">妙三多疫苗打几次（妙三多疫苗一次打多少毫升）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7812.htm" title="开动物诊所挣钱吗（开动物诊所需要什么条件）">开动物诊所挣钱吗（开动物诊所需要什么条件）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8804.htm" title="宠爱国际动物医院在哪里直播（宠爱国际动物园怎么样）">宠爱国际动物医院在哪里直播（宠爱国际动物园怎么样）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8525.htm" title="豆豉蒜头煮南瓜的做法大全(豆豉蒜头煮南瓜的做法窍门)">豆豉蒜头煮南瓜的做法大全(豆豉蒜头煮南瓜的做法窍门)</a></li>
+                        <li class="py-2"><a href="/html/category/article-8419.htm" title="动物疫苗企业名单公示时间 动物疫苗企业名单公示时间表">动物疫苗企业名单公示时间 动物疫苗企业名单公示时间表</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">2</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">6</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">62</span></li>
