--- a/html/date/2024-08/page-6.htm
+++ b/html/date/2024-08/page-6.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-8086.htm" title="兰州哪里有卖宠物狗的市场（兰州卖狗的宠物店）">兰州哪里有卖宠物狗的市场（兰州卖狗的宠物店）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8961.htm" title="学美容一个月工资多少左右（美容学出来多少钱工资）">学美容一个月工资多少左右（美容学出来多少钱工资）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8472.htm" title="广州宠物领养平台官网电话（广州市宠物领养平台）">广州宠物领养平台官网电话（广州市宠物领养平台）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8195.htm" title="知名奶茶店品牌(前10名奶茶店有哪些牌子)">知名奶茶店品牌(前10名奶茶店有哪些牌子)</a></li>
-                        <li class="py-2"><a href="/html/category/article-7592.htm" title="带鱼烧豆腐做法大全">带鱼烧豆腐做法大全</a></li>
-                        <li class="py-2"><a href="/html/category/article-7867.htm" title="动物接种疫苗的简报怎么写范文图片（动物接种疫苗的简报怎么写范文图片大全）">动物接种疫苗的简报怎么写范文图片（动物接种疫苗的简报怎么写范文图片大全）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8526.htm" title="动物医院的好评评语 动物医院的好评评语怎么写">动物医院的好评评语 动物医院的好评评语怎么写</a></li>
                         <li class="py-2"><a href="/html/category/article-8858.htm" title="南瓜小米粥的做法家常做法大全(南瓜小米粥如何做好吃)">南瓜小米粥的做法家常做法大全(南瓜小米粥如何做好吃)</a></li>
-                        <li class="py-2"><a href="/html/category/article-8693.htm" title="妙三多疫苗打几次（妙三多疫苗一次打多少毫升）">妙三多疫苗打几次（妙三多疫苗一次打多少毫升）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7702.htm" title="厦门哪里可以免费领养猫（厦门免费领养猫正规网）">厦门哪里可以免费领养猫（厦门免费领养猫正规网）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7701.htm" title="哪个处理器的核显性能最高(哪款处理器的核显性能好)">哪个处理器的核显性能最高(哪款处理器的核显性能好)</a></li>
+                        <li class="py-2"><a href="/html/category/article-8694.htm" title="自家猫咪抓了一点点血怎么办（自己家的小猫咪抓伤了还出了一点血没事吧）">自家猫咪抓了一点点血怎么办（自己家的小猫咪抓伤了还出了一点血没事吧）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7812.htm" title="开动物诊所挣钱吗（开动物诊所需要什么条件）">开动物诊所挣钱吗（开动物诊所需要什么条件）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8419.htm" title="动物疫苗企业名单公示时间 动物疫苗企业名单公示时间表">动物疫苗企业名单公示时间 动物疫苗企业名单公示时间表</a></li>
+                        <li class="py-2"><a href="/html/category/article-7976.htm" title="什么品牌的手表适合年轻人戴(哪种手表适合年轻人)">什么品牌的手表适合年轻人戴(哪种手表适合年轻人)</a></li>
+                        <li class="py-2"><a href="/html/category/article-8962.htm" title="开宠物店一天利润多少才能不亏本钱（开宠物店预算多少）">开宠物店一天利润多少才能不亏本钱（开宠物店预算多少）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8749.htm" title="安全摇篮哪个牌子好(摇篮安宝宝奶粉的特点)">安全摇篮哪个牌子好(摇篮安宝宝奶粉的特点)</a></li>
+                        <li class="py-2"><a href="/html/category/article-8582.htm" title="开宠物医院需要几个职业兽医资格证（开宠物医院需要几个职业兽医资格证呢）">开宠物医院需要几个职业兽医资格证（开宠物医院需要几个职业兽医资格证呢）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7755.htm" title="宠物粮食行业发展前景如何知乎（宠物粮食行业发展前景如何知乎）">宠物粮食行业发展前景如何知乎（宠物粮食行业发展前景如何知乎）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">2</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">6</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">62</span></li>
