--- a/html/date/2024-09/page-2.htm
+++ b/html/date/2024-09/page-2.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-8694.htm" title="自家猫咪抓了一点点血怎么办（自己家的小猫咪抓伤了还出了一点血没事吧）">自家猫咪抓了一点点血怎么办（自己家的小猫咪抓伤了还出了一点血没事吧）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7812.htm" title="开动物诊所挣钱吗（开动物诊所需要什么条件）">开动物诊所挣钱吗（开动物诊所需要什么条件）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8307.htm" title="中国十大动物疫苗公司排名第一（中国动物疫苗十强上市公司）">中国十大动物疫苗公司排名第一（中国动物疫苗十强上市公司）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7976.htm" title="什么品牌的手表适合年轻人戴(哪种手表适合年轻人)">什么品牌的手表适合年轻人戴(哪种手表适合年轻人)</a></li>
                         <li class="py-2"><a href="/html/category/article-8364.htm" title="宠物用品厂家进货渠道批发（宠物用品货源渠道）">宠物用品厂家进货渠道批发（宠物用品货源渠道）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8420.htm" title="动物医院许可证办理流程图（动物医院诊疗许可证办理）">动物医院许可证办理流程图（动物医院诊疗许可证办理）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8636.htm" title="宠物领养平台app推荐下载苹果手机（宠物领养平台app推荐下载苹果手机软件）">宠物领养平台app推荐下载苹果手机（宠物领养平台app推荐下载苹果手机软件）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8858.htm" title="南瓜小米粥的做法家常做法大全(南瓜小米粥如何做好吃)">南瓜小米粥的做法家常做法大全(南瓜小米粥如何做好吃)</a></li>
+                        <li class="py-2"><a href="/html/category/article-8195.htm" title="知名奶茶店品牌(前10名奶茶店有哪些牌子)">知名奶茶店品牌(前10名奶茶店有哪些牌子)</a></li>
+                        <li class="py-2"><a href="/html/category/article-9061.htm" title="拌料机的用途（大型拌料机的工作视频）">拌料机的用途（大型拌料机的工作视频）</a></li>
                         <li class="py-2"><a href="/html/category/article-7922.htm" title="动物接种疫苗多少钱一次啊深圳 动物接种疫苗多少钱一次啊深圳市">动物接种疫苗多少钱一次啊深圳 动物接种疫苗多少钱一次啊深圳市</a></li>
-                        <li class="py-2"><a href="/html/category/article-8525.htm" title="豆豉蒜头煮南瓜的做法大全(豆豉蒜头煮南瓜的做法窍门)">豆豉蒜头煮南瓜的做法大全(豆豉蒜头煮南瓜的做法窍门)</a></li>
-                        <li class="py-2"><a href="/html/category/article-8693.htm" title="妙三多疫苗打几次（妙三多疫苗一次打多少毫升）">妙三多疫苗打几次（妙三多疫苗一次打多少毫升）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7591.htm" title="动物疫苗接种方法及注意事项有哪些内容呢英语（动物疫苗接种技术）">动物疫苗接种方法及注意事项有哪些内容呢英语（动物疫苗接种技术）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8750.htm" title="北京中农大动物医院有限公司待遇 北京中农大动物医院有限公司待遇怎么样">北京中农大动物医院有限公司待遇 北京中农大动物医院有限公司待遇怎么样</a></li>
+                        <li class="py-2"><a href="/html/category/article-7702.htm" title="厦门哪里可以免费领养猫（厦门免费领养猫正规网）">厦门哪里可以免费领养猫（厦门免费领养猫正规网）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8085.htm" title="成都宠物托运公司哪家比较好一点（成都宠物物流公司）">成都宠物托运公司哪家比较好一点（成都宠物物流公司）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7812.htm" title="开动物诊所挣钱吗（开动物诊所需要什么条件）">开动物诊所挣钱吗（开动物诊所需要什么条件）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">2</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">6</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">62</span></li>
