--- a/html/date/2024-09/page-6.htm
+++ b/html/date/2024-09/page-6.htm
@@ -194,16 +194,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-8858.htm" title="南瓜小米粥的做法家常做法大全(南瓜小米粥如何做好吃)">南瓜小米粥的做法家常做法大全(南瓜小米粥如何做好吃)</a></li>
-                        <li class="py-2"><a href="/html/category/article-8582.htm" title="开宠物医院需要几个职业兽医资格证（开宠物医院需要几个职业兽医资格证呢）">开宠物医院需要几个职业兽医资格证（开宠物医院需要几个职业兽医资格证呢）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8250.htm" title="蛋糕的做法烤箱新手做（蛋糕的做法烤箱新手做不用牛奶）">蛋糕的做法烤箱新手做（蛋糕的做法烤箱新手做不用牛奶）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8962.htm" title="开宠物店一天利润多少才能不亏本钱（开宠物店预算多少）">开宠物店一天利润多少才能不亏本钱（开宠物店预算多少）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9113.htm" title="哈尔滨农大动物医院地址 哈尔滨农大动物医院地址在哪">哈尔滨农大动物医院地址 哈尔滨农大动物医院地址在哪</a></li>
+                        <li class="py-2"><a href="/html/category/article-9062.htm" title="猫瘟疫苗要打几次（猫瘟疫苗打几次有效）">猫瘟疫苗要打几次（猫瘟疫苗打几次有效）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8420.htm" title="动物医院许可证办理流程图（动物医院诊疗许可证办理）">动物医院许可证办理流程图（动物医院诊疗许可证办理）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8525.htm" title="豆豉蒜头煮南瓜的做法大全(豆豉蒜头煮南瓜的做法窍门)">豆豉蒜头煮南瓜的做法大全(豆豉蒜头煮南瓜的做法窍门)</a></li>
+                        <li class="py-2"><a href="/html/category/article-8750.htm" title="北京中农大动物医院有限公司待遇 北京中农大动物医院有限公司待遇怎么样">北京中农大动物医院有限公司待遇 北京中农大动物医院有限公司待遇怎么样</a></li>
+                        <li class="py-2"><a href="/html/category/article-9114.htm" title="河南省动物疫苗招标公告最新版（河南省动物疫病疫苗管理系统）">河南省动物疫苗招标公告最新版（河南省动物疫病疫苗管理系统）</a></li>
                         <li class="py-2"><a href="/html/category/article-8139.htm" title="宠物粮食批发价格 宠物粮食批发价格表">宠物粮食批发价格 宠物粮食批发价格表</a></li>
-                        <li class="py-2"><a href="/html/category/article-7701.htm" title="哪个处理器的核显性能最高(哪款处理器的核显性能好)">哪个处理器的核显性能最高(哪款处理器的核显性能好)</a></li>
-                        <li class="py-2"><a href="/html/category/article-7647.htm" title="给动物打疫苗要多少钱猫咪打（动物疫站给猫打疫苗收钱吗?）">给动物打疫苗要多少钱猫咪打（动物疫站给猫打疫苗收钱吗?）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7812.htm" title="开动物诊所挣钱吗（开动物诊所需要什么条件）">开动物诊所挣钱吗（开动物诊所需要什么条件）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7867.htm" title="动物接种疫苗的简报怎么写范文图片（动物接种疫苗的简报怎么写范文图片大全）">动物接种疫苗的简报怎么写范文图片（动物接种疫苗的简报怎么写范文图片大全）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8364.htm" title="宠物用品厂家进货渠道批发（宠物用品货源渠道）">宠物用品厂家进货渠道批发（宠物用品货源渠道）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7756.htm" title="自己给狗狗打的疫苗能办狗证吗?（自己给狗狗打的疫苗,疫苗本有用吗）">自己给狗狗打的疫苗能办狗证吗?（自己给狗狗打的疫苗,疫苗本有用吗）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8029.htm" title="简述动物防疫管理的要点是什么（简述动物防疫管理的要点是什么意思）">简述动物防疫管理的要点是什么（简述动物防疫管理的要点是什么意思）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8363.htm" title="动物防疫站可以打疫苗吗（动物防疫站能打疫苗吗）">动物防疫站可以打疫苗吗（动物防疫站能打疫苗吗）</a></li>
                     </ul>
     </div>
 </div>
@@ -214,7 +214,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">2</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">6</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">62</span></li>
