--- a/html/date/2024-10/index.htm
+++ b/html/date/2024-10/index.htm
@@ -122,6 +122,70 @@ var _hmt = _hmt || [];
                         <div class="panel-body">
                                                         <div class="row item py-3">
                                 <div class="col-md-3">
+                                    <a href="/html/category/article-9114.htm" class="list-image-box">
+                                        <img class="media-object list-image" alt="河南省动物疫苗招标公告最新版（河南省动物疫病疫苗管理系统）" src="/uploads/20240502/e98d93e7a4997d2f95d6c8c3f56f0ed3.webp" title="河南省动物疫苗招标公告最新版（河南省动物疫病疫苗管理系统）">
+                                    </a>
+                                </div>
+                                <div class="col-md-9 ps-3 item-body">
+                                    <div class="item-heading pb-2"><a href="/html/category/article-9114.htm" title="河南省动物疫苗招标公告最新版（河南省动物疫病疫苗管理系统）">河南省动物疫苗招标公告最新版（河南省动物疫病疫苗管理系统）</a></div>
+                                    <div class="desc">摘要：       本篇文章给大家谈谈河南省动物疫苗招标公告最新版，以及河南省动物疫病疫苗管理系统对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、招标公告在哪个网站公布?...</div>
+                                </div>
+                                <dl>
+                                    <dd><svg class="iconpark-icon">
+                                            <use href="#time"></use>
+                                        </svg> 10-04</dd>
+                                </dl>
+                            </div>
+                                                        <div class="row item py-3">
+                                <div class="col-md-3">
+                                    <a href="/html/category/article-9113.htm" class="list-image-box">
+                                        <img class="media-object list-image" alt="哈尔滨农大动物医院地址 哈尔滨农大动物医院地址在哪" src="/uploads/20240502/c2b60d7071d5b86eab5197de0db9c540.webp" title="哈尔滨农大动物医院地址 哈尔滨农大动物医院地址在哪">
+                                    </a>
+                                </div>
+                                <div class="col-md-9 ps-3 item-body">
+                                    <div class="item-heading pb-2"><a href="/html/category/article-9113.htm" title="哈尔滨农大动物医院地址 哈尔滨农大动物医院地址在哪">哈尔滨农大动物医院地址 哈尔滨农大动物医院地址在哪</a></div>
+                                    <div class="desc">摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于哈尔滨农大动物医院地址的问题，于是小编就整理了3个相关介绍哈尔滨农大动物医院地址的解答，让我们一起看看吧。北京农大宠物医院是24</div>
+                                </div>
+                                <dl>
+                                    <dd><svg class="iconpark-icon">
+                                            <use href="#time"></use>
+                                        </svg> 10-04</dd>
+                                </dl>
+                            </div>
+                                                        <div class="row item py-3">
+                                <div class="col-md-3">
+                                    <a href="/html/category/article-9062.htm" class="list-image-box">
+                                        <img class="media-object list-image" alt="猫瘟疫苗要打几次（猫瘟疫苗打几次有效）" src="/uploads/20240502/ea7022259d49e02c26f0760191a0711f.webp" title="猫瘟疫苗要打几次（猫瘟疫苗打几次有效）">
+                                    </a>
+                                </div>
+                                <div class="col-md-9 ps-3 item-body">
+                                    <div class="item-heading pb-2"><a href="/html/category/article-9062.htm" title="猫瘟疫苗要打几次（猫瘟疫苗打几次有效）">猫瘟疫苗要打几次（猫瘟疫苗打几次有效）</a></div>
+                                    <div class="desc">摘要：       今天给各位分享猫瘟疫苗要打几次的知识，其中也会对猫瘟疫苗打几次有效进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、猫咪打疫苗要打几次呢?..</div>
+                                </div>
+                                <dl>
+                                    <dd><svg class="iconpark-icon">
+                                            <use href="#time"></use>
+                                        </svg> 10-03</dd>
+                                </dl>
+                            </div>
+                                                        <div class="row item py-3">
+                                <div class="col-md-3">
+                                    <a href="/html/category/article-9061.htm" class="list-image-box">
+                                        <img class="media-object list-image" alt="拌料机的用途（大型拌料机的工作视频）" src="/uploads/20240502/b32c8a5d7127ac0cdf2de5114b4b98d5.webp" title="拌料机的用途（大型拌料机的工作视频）">
+                                    </a>
+                                </div>
+                                <div class="col-md-9 ps-3 item-body">
+                                    <div class="item-heading pb-2"><a href="/html/category/article-9061.htm" title="拌料机的用途（大型拌料机的工作视频）">拌料机的用途（大型拌料机的工作视频）</a></div>
+                                    <div class="desc">摘要：       今天给各位分享拌料机的用途的知识，其中也会对大型拌料机的工作视频进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、料理机的功能有哪些...  </div>
+                                </div>
+                                <dl>
+                                    <dd><svg class="iconpark-icon">
+                                            <use href="#time"></use>
+                                        </svg> 10-03</dd>
+                                </dl>
+                            </div>
+                                                        <div class="row item py-3">
+                                <div class="col-md-3">
                                     <a href="/html/category/article-8962.htm" class="list-image-box">
                                         <img class="media-object list-image" alt="开宠物店一天利润多少才能不亏本钱（开宠物店预算多少）" src="/uploads/20240502/ea7022259d49e02c26f0760191a0711f.webp" title="开宠物店一天利润多少才能不亏本钱（开宠物店预算多少）">
                                     </a>
@@ -162,16 +226,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-8857.htm" title="梦见抱着别人的女婴儿是什么意思（梦见抱着别人的小女孩什么意思）">梦见抱着别人的女婴儿是什么意思（梦见抱着别人的小女孩什么意思）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7867.htm" title="动物接种疫苗的简报怎么写范文图片（动物接种疫苗的简报怎么写范文图片大全）">动物接种疫苗的简报怎么写范文图片（动物接种疫苗的简报怎么写范文图片大全）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8086.htm" title="兰州哪里有卖宠物狗的市场（兰州卖狗的宠物店）">兰州哪里有卖宠物狗的市场（兰州卖狗的宠物店）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7702.htm" title="厦门哪里可以免费领养猫（厦门免费领养猫正规网）">厦门哪里可以免费领养猫（厦门免费领养猫正规网）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8582.htm" title="开宠物医院需要几个职业兽医资格证（开宠物医院需要几个职业兽医资格证呢）">开宠物医院需要几个职业兽医资格证（开宠物医院需要几个职业兽医资格证呢）</a></li>
+                        <li class="py-2"><a href="/html/category/article-7756.htm" title="自己给狗狗打的疫苗能办狗证吗?（自己给狗狗打的疫苗,疫苗本有用吗）">自己给狗狗打的疫苗能办狗证吗?（自己给狗狗打的疫苗,疫苗本有用吗）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8364.htm" title="宠物用品厂家进货渠道批发（宠物用品货源渠道）">宠物用品厂家进货渠道批发（宠物用品货源渠道）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8249.htm" title="狗粮品牌十大排行国产有哪些（狗粮排名前十品牌国产）">狗粮品牌十大排行国产有哪些（狗粮排名前十品牌国产）</a></li>
+                        <li class="py-2"><a href="/html/category/article-8803.htm" title="动物接种疫苗多少次有效呢（动物接种疫苗多少次有效呢）">动物接种疫苗多少次有效呢（动物接种疫苗多少次有效呢）</a></li>
                         <li class="py-2"><a href="/html/category/article-8029.htm" title="简述动物防疫管理的要点是什么（简述动物防疫管理的要点是什么意思）">简述动物防疫管理的要点是什么（简述动物防疫管理的要点是什么意思）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7481.htm" title="猫爬到床上会很脏吗（猫爬到床上会很脏吗为什么猫舔自己）">猫爬到床上会很脏吗（猫爬到床上会很脏吗为什么猫舔自己）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7755.htm" title="宠物粮食行业发展前景如何知乎（宠物粮食行业发展前景如何知乎）">宠物粮食行业发展前景如何知乎（宠物粮食行业发展前景如何知乎）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8140.htm" title="宠物粮怎么加工出来的 宠物粮怎么加工出来的呢">宠物粮怎么加工出来的 宠物粮怎么加工出来的呢</a></li>
-                        <li class="py-2"><a href="/html/category/article-8196.htm" title="宠物托运送货上门多少钱（宠物托运送货上门多少钱一个月）">宠物托运送货上门多少钱（宠物托运送货上门多少钱一个月）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8363.htm" title="动物防疫站可以打疫苗吗（动物防疫站能打疫苗吗）">动物防疫站可以打疫苗吗（动物防疫站能打疫苗吗）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7976.htm" title="什么品牌的手表适合年轻人戴(哪种手表适合年轻人)">什么品牌的手表适合年轻人戴(哪种手表适合年轻人)</a></li>
-                        <li class="py-2"><a href="/html/category/article-8636.htm" title="宠物领养平台app推荐下载苹果手机（宠物领养平台app推荐下载苹果手机软件）">宠物领养平台app推荐下载苹果手机（宠物领养平台app推荐下载苹果手机软件）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7536.htm" title="深圳装修公司排名前十强有哪些公司(深圳装修公司排名前十强有哪些品牌)">深圳装修公司排名前十强有哪些公司(深圳装修公司排名前十强有哪些品牌)</a></li>
+                        <li class="py-2"><a href="/html/category/article-8693.htm" title="妙三多疫苗打几次（妙三多疫苗一次打多少毫升）">妙三多疫苗打几次（妙三多疫苗一次打多少毫升）</a></li>
                     </ul>
     </div>
 </div>
@@ -182,7 +246,7 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">2</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">6</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">62</span></li>
